# simple-dict

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  cfgwriter.c  client  client.c  config.h  crypto.c  crypto.h  dict.c  dict.h  migrate.c  migratenew.c  old_dict.h  printall.c  server  server.c  server.h  tcpool.h
.github/workflows/: docker.yml
